--- a/Assignment1/email.html
+++ b/Assignment1/email.html
@@ -23,10 +23,6 @@
             max-width: 600px;
             margin: auto;
         }
-        .signature {
-            font-style: italic;
-            font-weight: bold;
-        }
         a {
             color: blue;
             text-decoration: none;
@@ -61,7 +57,7 @@
         <p>I am eager to bring my expertise and enthusiasm to your team. Enclosed is my resume for your review. I would be grateful for the opportunity to discuss my qualifications further in an interview.</p>
 
         <p>Sincerely,</p>
-        <p class="signature">Ramesh Kumar</p>
+        <p class="signature" style="font-style: italic; font-weight: bold;">Ramesh Kumar</p>
     </div>
 </body>
 </html>
